pagination in blog

--- a/public/assets/styles/style-rtl.css
+++ b/public/assets/styles/style-rtl.css
@@ -413,3 +413,12 @@ body {
 }
 
 /*# sourceMappingURL=style-rtl.css.map */
+
+.custom-pagination-container{
+    display: flex;
+    margin-top: 2rem;
+}
+
+.custom-pagination-container nav{
+    margin:auto;
+}
